--- a/src/frames/index/0/1.html
+++ b/src/frames/index/0/1.html
@@ -11,7 +11,7 @@
     <div id="typ-intro"></div>
     <div id="typ-gen"></div>
     <div id="typ-outro"></div>
-    <div id="typ-indicator"></div>
+    <div id="typ-indicator" style="font-family: 'Iosevka Web'"></div>
 
     <script src="../../../js/core.js"></script>
     <script type="text/javascript">
@@ -29,7 +29,7 @@
       const s1 =
         "The inch (abbreviation: in or ’’) is a unit of length in the (British) imperial and United States customary systems of measurement.";
       const s2 =
-        "In the United States, it is called the ”big inch,” and is the square inch. The number of inches that the imperial system has had is as large as the number of inches in the United States. In 1812, England was the world’s largest island, while the United States was the third largest in the world. The United States is also the second largest in the world. The United States is the only industrialized nation to have the largest and largest square inches. In the United States, it is called the ”big inch,” and is the square inch. The number of inches that the imperial system has had is as large as the number of inches in the United States. In 1812, England was the world’s largest island, while the United States was the third largest in the world. The United States is also the second largest in the world. The United States is the only industrialized nation to have the largest and largest square inches. In the United States, it is called the ”big inch,” and is the square inch. The number of inches that the imperial system has had is as large as the number of inches in the United States. In 1812, England was the world’s largest island, while the United States was the third largest in the world. The United States is also the second largest in the world. The United States is the only industrialized nation to have the largest and largest square inches.";
+        "In the United States, it is called the ”big inch,” and is the square inch. The number of inches that the imperial system has had is as large as the number of inches in the United States. In 1812, England was the world’s largest island, while the United States was the third largest in the world. The United States is also the second largest in the world. The United States is the only industrialized nation to have the largest and largest square inches.";
       const s3 = "It is equal to ​1⁄36 yard or ​1⁄12 of a foot.";
 
       const resizeObserver = new ResizeObserver(() => {
