--- a/src/frames/index/0/4.html
+++ b/src/frames/index/0/4.html
@@ -11,7 +11,7 @@
     <div id="typ-intro"></div>
     <div id="typ-gen"></div>
     <div id="typ-outro"></div>
-    <div id="typ-indicator"></div>
+    <div id="typ-indicator" style="font-family: 'Iosevka Web'"></div>
 
     <script src="../../../js/core.js"></script>
     <script type="text/javascript">
