Updated splash screen

--- a/src/frames/populate.html
+++ b/src/frames/populate.html
@@ -163,8 +163,8 @@
         // console.log(arg);
         if (tw5 !== null) {
           // indicatorEl.parentElement.removeChild(indicatorEl);
-          tw5.stop();
-          tw5.options.cursor = "";
+          // tw5.stop();
+          tw5.options.cursor = " ";
           tw5 = null;
         }
       });
