--- a/src/frames/howtouse.html
+++ b/src/frames/howtouse.html
@@ -7,13 +7,13 @@
   </head>
 
   <body>
-    <h1>How to Use Encyclopaedia Mundi</h1>
+    <h1>How to Use</h1>
     <p>
-      To find a topic of your choice in Encyclopaedia Mundi, start by typing in
-      the search bar. Once you click on the Search button, this software will
-      traverse its database and employ state-of-the-art technology to decompress
-      the data. As decompression moves along, the result will be presented to
-      you progressively.
+      To find a topic of your choice in Encyclopaedia Mundi&trade;, start by
+      typing in the search bar. Once you click on the Search button, this
+      software will traverse its database and employ state-of-the-art technology
+      to decompress the data. As decompression moves along, the result will be
+      presented to you progressively.
     </p>
     <p>
       If you are simply in a mood of curiosity and do not have a specific topic
@@ -28,6 +28,6 @@
       at the bottom of the sidebar.
     </p>
 
-    <p>Have fun, and thanks for using Encyclopaedia Mundi!</p>
+    <p>Have fun, and thanks for using Encyclopaedia Mundi&trade;!</p>
   </body>
 </html>
