--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Welcome!</h1>
-    <p>Thank you for trying out Encyclopaedia Mundi!</p>
+    <p>Thank you for trying out Encyclopaedia Mundi&trade;!</p>
     <p>
       While the development is still underway, we are excited to give you an
       early preview of what it can achieve. Please understand that while we were
@@ -22,9 +22,9 @@
       also kindly ask you NOT to distribute this software to non-employees.
     </p>
     <p>
-      <b>Did you know?</b> Encyclopaedia Mundi (or Encyclopaedīa Mundī if you
-      wish to be orthographically correct) is Latin for World Encyclopaedia, and
-      a Roman would pronounce it like &lsquo;yeen-kee-klo-pae-DYA
+      <b>Did you know?</b> Encyclopaedia Mundi&trade; (or Encyclopaedīa Mundī if
+      you wish to be orthographically correct) is Latin for World Encyclopaedia,
+      and a Roman would pronounce it like &lsquo;yeen-kee-klo-pae-DYA
       MOON-dee&rsquo;! If you are a linguaphile, why not search for &lsquo;<a
         href=""
         id="class-latin"
