--- a/src/aboutModal.html
+++ b/src/aboutModal.html
@@ -35,7 +35,7 @@
             <image id="aMod-logo-img" src="./bin/images/appIcon.png"></image>
           </div>
           <div id="aMod-content">
-            <p id="aMod-content-el1">Encyclopaedia Mundi</p>
+            <p id="aMod-content-el1">Encyclopaedia Mundi<sup>TM</sup></p>
             <p id="aMod-content-version">Version 0.618.0</p>
             <p>
               1989-1991 Thibodeau Publishing; 1993, 1995–1997 Pitchman-Survoy
