--- a/src/quitModal.html
+++ b/src/quitModal.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="window-body">
-        <p>Do you want to exit Encyclopaedia Mundi?</p>
+        <p>Do you want to exit Encyclopaedia Mundi<sup>TM</sup>?</p>
         <section class="field-row" style="justify-content: flex-end">
           <button id="qMod-quit">OK</button>
           <button id="qMod-cancel">Cancel</button>
