Added classical latin link

--- a/src/frames/index/A.html
+++ b/src/frames/index/A.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Articles starting with A</h1>
-    <div>Some of the articles that start with A:</div>
+    <div>A is the first in the modern English alphabet. Here are some of the articles in Encyclopaedia Mundi&trade; that start with A:</div>
     <li><a href="./A/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./A/1.html" draggable="false">Anchor</a></li>
     <li><a href="./A/2.html" draggable="false">Anne Boleyn</a></li>
