--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -26,7 +26,7 @@
       you wish to be orthographically correct) is Latin for World Encyclopaedia,
       and a Roman would pronounce it like &lsquo;yeen-kee-klo-pae-DYA
       MOON-dee&rsquo;! If you are a linguaphile, why not search for &lsquo;<a
-        href=""
+        href="./index/C/cl.html"
         id="class-latin"
         draggable="false"
         >Classical Latin</a
