--- a/src/licensesplash.html
+++ b/src/licensesplash.html
@@ -11,7 +11,7 @@
         Click anywhere to close. Alternatively, press Q or Esc key on your
         keyboard.
       </span> -->
-      <span> Click anywhere to close. </span>
+      <span> Click anywhere or press Esc to close.</span>
     </div>
 
     <div class="license-container">
