Updated notes to test user

--- a/src/frames/note.html
+++ b/src/frames/note.html
@@ -11,48 +11,13 @@
     <div id="typ">
       <p>Dear Colleagues,</p>
       <p>
-        As you know, from the potato ricer that you too may have received in
-        lieu of annual bonus to heavy excavators that were used to build part of
-        the magnificant Wardle Canal, Pitchman-Survoy Inc. is known for its
-        dependable household appliances and mechanical industrial products. But
-        people outside of our legal and finance departments are rarely aware
-        that we also have a publishing subdivision. When Pitchman Industries and
-        Survoy Group International proposed a merger eight years ago, U.S.
-        Department of Commerce and Canadian Chamber of Commerce imposed a few
-        conditions for the merger to clear, citing antitrust concerns. While
-        most of these conditions pertain to divestiture, one requirement
-        stipulated that Thibodeau Publishing, an affiliate of Survoy Group
-        International that reprint rare books and manuscripts, would remain
-        operational within the new entity for at least 10 years. While our
-        friends at Thibodeau are immensely proud of their heritage in metal
-        type, we believe that the digital technology will become far more
-        prevalent in the near future. Therefore, we remain hopeful that with a
-        little help and technical know-how from my department, Thibodeau can
-        finally come up with a commerical success and see a turnaround for the
-        first time in their history.
+        As you know, Pitchman-Survoy Inc. is known for its dependable household appliances and mechanical industrial products—products ranging from potato ricers (that you too may have received in lieu of annual bonus) to heavy excavators (that were used to build part of the magnificent Wardle Canal). But people outside of our legal and finance departments are rarely aware that we also have a publishing subdivision. When Pitchman Industries and Survoy Group International proposed a merger eight years ago, the U.S. Department of Commerce and Canadian Chamber of Commerce cited antitrust concerns and imposed a few conditions for the merger to clear. While most of these conditions pertain to divestiture, one requirement stipulated that Thibodeau Publishing, an affiliate of Survoy Group International that reprint rare books and manuscripts, would remain operational within the new entity for at least 10 years. While our friends at Thibodeau are immensely proud of their heritage in metal type, we believe that digital technology will become far more prevalent in the near future. We remain hopeful that with a little help and technical know-how from my department, Thibodeau can finally come up with a commercial success and see a profit for the first time in their history.  
       </p>
       <p>
-        My team and our friends at Thibodeau went back and forth and landed on
-        the decision to convert every volume of Encyclopaedia Mundi in digital
-        form. Our initial market research indicated that we have to opt for an
-        aggresive compression rate so that our database can fit on the disk
-        space of an average target customer, but this also means that data needs
-        to be decompressed on the fly, and the result may not show up
-        instantaneously. However, we hope that the cost of purchasing high
-        capacity hard disk dirves can lower over time, we would be able to sell
-        a version with faster performance–albeit taking up more hard disk
-        space–as a future upgrade.
+        My team and our friends at Thibodeau went back and forth and landed on the decision to convert every volume of Encyclopaedia Mundi in digital form. Our initial market research and exploratory data analysis indicated that our average target customers are willing to allocate around 50 megabytes of available hard disk drive space and will spend no more than 4.71 seconds waiting for a digital encyclopaedia entry to load. Due to the enormous storage size of Encyclopaedia Mundi, we have opted for an aggressive compression rate that enables the Encyclopaedia Mundi to fit on most machines. Since the data needs to be decompressed on the fly, the entries may not show up instantaneously, but within acceptable tolerances. However, we hope that the cost of purchasing high capacity hard disk drives can lower over time, we would be able to sell a version with faster performance–albeit taking up more hard disk space–as a future upgrade.  
       </p>
       <p>
-        Lastly, I cannot be thankful enough for our friends at Thibodeau
-        Publishing. Our partnership has allowed us to digitize a majority of the
-        Encyclopaedia Mundi. Even though you may bump into a not-yet-digitized
-        article once in a while, rest assured that me and my colleagues are
-        working on it. If you happen to go on a business trip to Quebec (or as
-        they say it up there, Québec), you need to allot some time to visit
-        their storage just to appreciate how much physical space those delicate
-        leather-bound books actually take up. If I had to be frank, our digital
-        version just doesn't do it justice in that regard. Yet.
+        Lastly, I cannot be thankful enough for our friends at Thibodeau Publishing. Our partnership has allowed us to digitize a majority of the Encyclopaedia Mundi. Even though you may bump into a not-yet-digitized article once in a while, rest assured that my colleagues and I are working on it. If you happen to go on a business trip to Quebec (or as they say it up there, Québec), you need to allot some time to visit their storage just to appreciate how much physical space those delicate leather-bound books actually take up. If I had to be frank, our digital version just doesn't do it justice in that regard. Yet.
       </p>
       <br />
       Regards,<br />Dave from Technical Evaluation & Advancement
