Adding more content

--- a/src/frames/index/A.html
+++ b/src/frames/index/A.html
@@ -8,15 +8,20 @@
 
   <body>
     <h1>Articles starting with A</h1>
-    <div>A is the first in the modern English alphabet. Here are some of the articles in Encyclopaedia Mundi&trade; that start with A:</div>
-    <li><a href="./A/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./A/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./A/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      A is the first in the modern English alphabet. Here are some of the
+      articles in Encyclopaedia Mundi&trade; that start with A:
+    </div>
+    <li><a href="./A/0.html" draggable="false">Ab Anbar</a></li>
+    <li><a href="./A/1.html" draggable="false">Acabou Chorare</a></li>
+    <li><a href="./A/2.html" draggable="false">Ad-Diya</a></li>
     <li>
-      <a href="./A/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./A/3.html" draggable="false">Ae, Dumfries and Galloway</a>
     </li>
-    <li><a href="./A/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./A/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./A/4.html" draggable="false">Alexander Afanasyev</a></li>
+    <li><a href="./A/5.html" draggable="false">Ajaloomuuseum</a></li>
+    <li><a href="./A/6.html" draggable="false">Aldynes</a></li>
+    <li><a href="./A/7.html" draggable="false">Avaldsnes (municipality)</a></li>
   </body>
   <script>
     const { ipcRenderer, remote } = require("electron");
