--- a/src/frames/index/B.html
+++ b/src/frames/index/B.html
@@ -9,13 +9,21 @@
   <body>
     <h1>Articles starting with B</h1>
     <div>Some of the articles that start with B:</div>
-    <li><a href="./B/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./B/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./B/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./B/0.html" draggable="false">BAC One-Eleven</a></li>
     <li>
-      <a href="./B/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./B/1.html" draggable="false"
+        >Banque nationale pour le commerce et l'industrie</a
+      >
     </li>
-    <li><a href="./B/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./B/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./B/2.html" draggable="false">BeOS</a></li>
+    <li>
+      <a href="./B/3.html" draggable="false">Béjaïa</a>
+    </li>
+    <li><a href="./B/4.html" draggable="false">BGN/PCGN romanization</a></li>
+    <li><a href="./B/5.html" draggable="false">Bhadra (Hindu calendar)</a></li>
+    <li>
+      <a href="./B/6.html" draggable="false">Billiard Congress of America</a>
+    </li>
+    <li><a href="./B/7.html" draggable="false">Blabia truncata</a></li>
   </body>
 </html>
