--- a/src/frames/index/C.html
+++ b/src/frames/index/C.html
@@ -11,9 +11,9 @@
     <div>Some of the articles that start with C:</div>
     <li><a href="./C/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./C/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./C/2.html" draggable="false">Anne Boleyn</a></li>
+    <li><a href="./C/2.html" draggable="false">Anne</a></li>
     <li>
-      <a href="./C/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./C/3.html" draggable="false">Appellation</a>
     </li>
     <li><a href="./C/4.html" draggable="false">Antimatter</a></li>
     <li><a href="./C/5.html" draggable="false">Azithromycin</a></li>
