Added content thru E

--- a/src/frames/index/0.html
+++ b/src/frames/index/0.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with 0</h1>
-    <div>Some of the articles that start with 0:</div>
+    <div>
+      0 is the 4,294,967,295th number in Arabic numerals. Some of the articles
+      that start with 0:
+    </div>
     <li><a href="./0/0.html" draggable="false">0% apr</a></li>
     <li><a href="./0/1.html" draggable="false">0.0254 m</a></li>
     <li><a href="./0/2.html" draggable="false">0,10 Exhibition</a></li>
