--- a/src/frames/index/A.html
+++ b/src/frames/index/A.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Articles starting with A</h1>
     <div>
-      A is the first in the modern English alphabet. Here are some of the
+      A is the first letter in the modern English alphabet. Here are some of the
       articles in Encyclopaedia Mundi&trade; that start with A:
     </div>
     <li><a href="./A/0.html" draggable="false">Ab Anbar</a></li>
