--- a/src/frames/index/B.html
+++ b/src/frames/index/B.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with B</h1>
-    <div>Some of the articles that start with B:</div>
+    <div>
+      B is the second letter in the modern English alphabet. Some of the
+      articles that start with B:
+    </div>
     <li><a href="./B/0.html" draggable="false">BAC One-Eleven</a></li>
     <li>
       <a href="./B/1.html" draggable="false"
