--- a/src/frames/index/E.html
+++ b/src/frames/index/E.html
@@ -8,14 +8,22 @@
 
   <body>
     <h1>Articles starting with E</h1>
-    <div>Some of the articles that start with E:</div>
-    <li><a href="./E/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./E/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./E/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      E is the fifth letter in the modern English alphabet. Some of the articles
+      that start with E:
+    </div>
+    <li><a href="./E/0.html" draggable="false">Ea-mukin-zeri</a></li>
+    <li><a href="./E/1.html" draggable="false">Ee, Noardeast-Fryslân</a></li>
+    <li><a href="./E/2.html" draggable="false">Egao ga Sukidakara</a></li>
     <li>
-      <a href="./E/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./E/3.html" draggable="false">Eh'häusl</a>
     </li>
-    <li><a href="./E/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./E/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./E/4.html" draggable="false">Eje Central</a></li>
+    <li><a href="./E/5.html" draggable="false">Eoanseranas handae</a></li>
+    <li>
+      <a href="./E/6.html" draggable="false"
+        >Es ist nichts Gesundes an meinem Leibe, BWV 25</a
+      >
+    </li>
   </body>
 </html>
