--- a/src/frames/index/D.html
+++ b/src/frames/index/D.html
@@ -8,14 +8,24 @@
 
   <body>
     <h1>Articles starting with D</h1>
-    <div>Some of the articles that start with D:</div>
-    <li><a href="./D/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./D/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./D/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      D is the fourth letter in the modern English alphabet. Some of the
+      articles that start with D:
+    </div>
+    <li><a href="./D/0.html" draggable="false">DaVinci's War</a></li>
+    <li><a href="./D/1.html" draggable="false">dbx</a></li>
+    <li><a href="./D/2.html" draggable="false">Dduallt</a></li>
     <li>
-      <a href="./D/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./D/3.html" draggable="false">Dhadimagi Kilhi</a>
     </li>
-    <li><a href="./D/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./D/5.html" draggable="false">Azithromycin</a></li>
+    <li>
+      <a href="./D/4.html" draggable="false"
+        >Di-tert-butyl-iminodicarboxylate</a
+      >
+    </li>
+    <li><a href="./D/5.html" draggable="false">Dja River scrub warbler</a></li>
+    <li><a href="./D/6.html" draggable="false">Dlouhoňovice</a></li>
+    <li><a href="./D/7.html" draggable="false">Dnestrovskiye melodii</a></li>
+    <li><a href="./D/8.html" draggable="false">Dypsis decaryi</a></li>
   </body>
 </html>
