Updated content til N

--- a/src/frames/index/G.html
+++ b/src/frames/index/G.html
@@ -8,14 +8,22 @@
 
   <body>
     <h1>Articles starting with G</h1>
-    <div>Some of the articles that start with G:</div>
-    <li><a href="./G/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./G/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./G/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      G is the seventh letter in the modern English alphabet. Some of the
+      articles that start with G:
+    </div>
     <li>
-      <a href="./G/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./G/0.html" draggable="false">Gå upp och pröva dina vingar</a>
     </li>
-    <li><a href="./G/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./G/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./G/1.html" draggable="false">Gjallarhorn</a></li>
+    <li><a href="./G/2.html" draggable="false">Glabella</a></li>
+    <li>
+      <a href="./G/3.html" draggable="false">Gogi-guksu</a>
+    </li>
+    <li><a href="./G/4.html" draggable="false">Gua bao</a></li>
+    <li><a href="./G/5.html" draggable="false">Gyaku Jūji-jime</a></li>
+    <li>
+      <a href="./G/6.html" draggable="false">Günther's dwarf burrowing skink</a>
+    </li>
   </body>
 </html>
