--- a/src/frames/index/H.html
+++ b/src/frames/index/H.html
@@ -8,14 +8,22 @@
 
   <body>
     <h1>Articles starting with H</h1>
-    <div>Some of the articles that start with H:</div>
-    <li><a href="./H/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./H/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./H/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      H is the eighth letter in the modern English alphabet. Some of the
+      articles that start with H:
+    </div>
+    <li><a href="./H/0.html" draggable="false">Hanky code</a></li>
+    <li><a href="./H/1.html" draggable="false">HC Dynamo Moscow</a></li>
+    <li><a href="./H/2.html" draggable="false">Hdatta</a></li>
     <li>
-      <a href="./H/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./H/3.html" draggable="false">Here Comes the Sun</a>
     </li>
-    <li><a href="./H/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./H/5.html" draggable="false">Azithromycin</a></li>
+    <li>
+      <a href="./H/4.html" draggable="false">Hi-Fi News & Record Review</a>
+    </li>
+    <li><a href="./H/5.html" draggable="false">Hjaðningavíg</a></li>
+    <li><a href="./H/6.html" draggable="false">Hotteok</a></li>
+    <li><a href="./H/7.html" draggable="false">hr-Bigband</a></li>
+    <li><a href="./H/8.html" draggable="false">Hvalfjörður Tunnel</a></li>
   </body>
 </html>
