--- a/src/frames/index/I.html
+++ b/src/frames/index/I.html
@@ -8,14 +8,22 @@
 
   <body>
     <h1>Articles starting with I</h1>
-    <div>Some of the articles that start with I:</div>
-    <li><a href="./I/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./I/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./I/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      I am the ninth letter in the modern English alphabet. Some of the articles
+      that start with I:
+    </div>
+    <li><a href="./I/0.html" draggable="false">Ĳ</a></li>
+    <li><a href="./I/1.html" draggable="false">Ika sōmen</a></li>
     <li>
-      <a href="./I/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./I/2.html" draggable="false"
+        >Il-Kullana to tal-Ġifen Cliffs Important Bird Area</a
+      >
     </li>
-    <li><a href="./I/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./I/5.html" draggable="false">Azithromycin</a></li>
+    <li>
+      <a href="./I/3.html" draggable="false">Ioann of Georgia</a>
+    </li>
+    <li><a href="./I/4.html" draggable="false">Iquiracetima aspasia</a></li>
+    <li><a href="./I/5.html" draggable="false">It's a Sin</a></li>
+    <li><a href="./I/6.html" draggable="false">Ixerba</a></li>
   </body>
 </html>
