--- a/src/frames/index/J.html
+++ b/src/frames/index/J.html
@@ -8,14 +8,20 @@
 
   <body>
     <h1>Articles starting with J</h1>
-    <div>Some of the articles that start with J:</div>
-    <li><a href="./J/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./J/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./J/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      J is the 10th letter in the modern English alphabet. Some of the articles
+      that start with J:
+    </div>
+    <li><a href="./J/0.html" draggable="false">Já jsem Stěna smrti</a></li>
+    <li><a href="./J/1.html" draggable="false">J. B. Hunt</a></li>
+    <li><a href="./J/2.html" draggable="false">Je ne sais pas pourquoi</a></li>
     <li>
-      <a href="./J/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./J/3.html" draggable="false"
+        >Jharsuguda Junction railway station</a
+      >
     </li>
-    <li><a href="./J/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./J/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./J/4.html" draggable="false">Jpred</a></li>
+    <li><a href="./J/5.html" draggable="false">Juaari</a></li>
+    <li><a href="./J/6.html" draggable="false">Jydegaard Formation</a></li>
   </body>
 </html>
