--- a/src/frames/index/K.html
+++ b/src/frames/index/K.html
@@ -8,14 +8,17 @@
 
   <body>
     <h1>Articles starting with K</h1>
-    <div>Some of the articles that start with K:</div>
-    <li><a href="./K/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./K/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./K/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      K is the 11th letter in the modern English alphabet. Some of the articles
+      that start with K:
+    </div>
+    <li><a href="./K/0.html" draggable="false">Kaʻū Desert</a></li>
+    <li><a href="./K/1.html" draggable="false">KcsA potassium channel</a></li>
+    <li><a href="./K/2.html" draggable="false">KFUM's Boldklub Roskilde</a></li>
     <li>
-      <a href="./K/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./K/3.html" draggable="false">Khichdi</a>
     </li>
-    <li><a href="./K/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./K/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./K/4.html" draggable="false">Kjeldahl method</a></li>
+    <li><a href="./K/5.html" draggable="false">Klaberjass</a></li>
   </body>
 </html>
