--- a/src/frames/index/L.html
+++ b/src/frames/index/L.html
@@ -8,14 +8,19 @@
 
   <body>
     <h1>Articles starting with L</h1>
-    <div>Some of the articles that start with L:</div>
-    <li><a href="./L/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./L/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./L/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      L is the 12th letter in the modern English alphabet. Some of the articles
+      that start with L:
+    </div>
+    <li><a href="./L/0.html" draggable="false">La Grève-sur-Mignon</a></li>
     <li>
-      <a href="./L/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./L/1.html" draggable="false"
+        >LDL-receptor related protein-associated protein</a
+      >
     </li>
-    <li><a href="./L/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./L/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./L/2.html" draggable="false">LeBaron Incorporated</a></li>
+    <li>
+      <a href="./L/3.html" draggable="false">Lhen Coan</a>
+    </li>
   </body>
 </html>
