--- a/src/frames/index/M.html
+++ b/src/frames/index/M.html
@@ -8,14 +8,30 @@
 
   <body>
     <h1>Articles starting with M</h1>
-    <div>Some of the articles that start with M:</div>
-    <li><a href="./M/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./M/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./M/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      M is the 13th letter of the modern English alphabet. Some of the articles
+      that start with M:
+    </div>
     <li>
-      <a href="./M/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./M/0.html" draggable="false"
+        >Me! I'm Afraid of Virginia Woolf</a
+      >
     </li>
-    <li><a href="./M/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./M/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./M/1.html" draggable="false">Mfarakeh</a></li>
+    <li>
+      <a href="./M/2.html" draggable="false">Mhadei Wildlife Sanctuary</a>
+    </li>
+    <li>
+      <a href="./M/3.html" draggable="false">Mjølnir crater</a>
+    </li>
+    <li><a href="./M/4.html" draggable="false">mm'-type filter</a></li>
+    <li>
+      <a href="./M/5.html" draggable="false"
+        >Mn2+-dependent ADP-ribose/CDP-alcohol diphosphatase</a
+      >
+    </li>
+    <li>
+      <a href="./M/6.html" draggable="false">Motorola International 3200</a>
+    </li>
   </body>
 </html>
