--- a/src/frames/index/F.html
+++ b/src/frames/index/F.html
@@ -8,14 +8,21 @@
 
   <body>
     <h1>Articles starting with F</h1>
-    <div>Some of the articles that start with F:</div>
-    <li><a href="./F/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./F/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./F/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      F is the sixth letter in the modern English alphabet. Some of the articles
+      that start with F:
+    </div>
     <li>
-      <a href="./F/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./F/0.html" draggable="false">Faa'a International Airport</a>
     </li>
-    <li><a href="./F/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./F/5.html" draggable="false">Azithromycin</a></li>
+    <li>
+      <a href="./F/1.html" draggable="false">FBI files on Elvis Presley</a>
+    </li>
+    <li><a href="./F/2.html" draggable="false">Fiachu Muillethan</a></li>
+    <li>
+      <a href="./F/3.html" draggable="false">Fjellhamar FK</a>
+    </li>
+    <li><a href="./F/4.html" draggable="false">Fu'an dialect</a></li>
+    <li><a href="./F/5.html" draggable="false">fx-7000G</a></li>
   </body>
 </html>
