--- a/src/frames/index/O.html
+++ b/src/frames/index/O.html
@@ -8,14 +8,15 @@
 
   <body>
     <h1>Articles starting with O</h1>
-    <div>Some of the articles that start with O:</div>
-    <li><a href="./O/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./O/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./O/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      O is the 15th letter in the modern English alphabet. Some of the articles
+      that start with O:
+    </div>
+    <li><a href="./O/0.html" draggable="false">Obadiah Poundage</a></li>
+    <li><a href="./O/1.html" draggable="false">Oqaatsut</a></li>
+    <li><a href="./O/2.html" draggable="false">Os TF</a></li>
     <li>
-      <a href="./O/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./O/3.html" draggable="false">Où sont-elles passées</a>
     </li>
-    <li><a href="./O/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./O/5.html" draggable="false">Azithromycin</a></li>
   </body>
 </html>
