--- a/src/frames/index/1.html
+++ b/src/frames/index/1.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with 1</h1>
-    <div>Some of the articles that start with 1:</div>
+    <div>
+      1 is the first number in Arabic numerals. Some of the articles that start
+      with 1:
+    </div>
     <li><a href="./1/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./1/1.html" draggable="false">Anchor</a></li>
     <li><a href="./1/2.html" draggable="false">Anne Boleyn</a></li>
