--- a/src/frames/index/4.html
+++ b/src/frames/index/4.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with 4</h1>
-    <div>Some of the articles that start with 4:</div>
+    <div>
+      4 is the fourth number in Arabic numerals. Some of the articles that start
+      with 4:
+    </div>
     <li><a href="./4/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./4/1.html" draggable="false">Anchor</a></li>
     <li><a href="./4/2.html" draggable="false">Anne Boleyn</a></li>
