--- a/src/frames/index/7.html
+++ b/src/frames/index/7.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with 7</h1>
-    <div>Some of the articles that start with 7:</div>
+    <div>
+      7 is the seventh number in Arabic numerals. Some of the articles that
+      start with 7:
+    </div>
     <li><a href="./7/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./7/1.html" draggable="false">Anchor</a></li>
     <li><a href="./7/2.html" draggable="false">Anne Boleyn</a></li>
