--- a/src/frames/index/8.html
+++ b/src/frames/index/8.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with 8</h1>
-    <div>Some of the articles that start with 8:</div>
+    <div>
+      8 is the eighth number in Arabic numerals. Some of the articles that start
+      with 8:
+    </div>
     <li><a href="./8/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./8/1.html" draggable="false">Anchor</a></li>
     <li><a href="./8/2.html" draggable="false">Anne Boleyn</a></li>
