--- a/src/frames/index/9.html
+++ b/src/frames/index/9.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with 9</h1>
-    <div>Some of the articles that start with 9:</div>
+    <div>
+      9 is the ninth number in Arabic numerals. Some of the articles that start
+      with 9:
+    </div>
     <li><a href="./9/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./9/1.html" draggable="false">Anchor</a></li>
     <li><a href="./9/2.html" draggable="false">Anne Boleyn</a></li>
