--- a/src/frames/index/R.html
+++ b/src/frames/index/R.html
@@ -8,14 +8,24 @@
 
   <body>
     <h1>Articles starting with R</h1>
-    <div>Some of the articles that start with R:</div>
-    <li><a href="./R/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./R/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./R/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      R is the 18th letter in the modern English alphabet. Some of the articles
+      that start with R:
+    </div>
+    <li><a href="./R/0.html" draggable="false">Raadio 2</a></li>
     <li>
-      <a href="./R/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./R/1.html" draggable="false"
+        >RbcL 5′ UTR RNA stabilising element</a
+      >
     </li>
-    <li><a href="./R/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./R/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./R/2.html" draggable="false">Rh blood group system</a></li>
+    <li>
+      <a href="./R/3.html" draggable="false">RNA polymerase</a>
+    </li>
+    <li>
+      <a href="./R/4.html" draggable="false"
+        >Rt. Hon. William Saunders Sebright Lascelles</a
+      >
+    </li>
   </body>
 </html>
