--- a/src/frames/index/2.html
+++ b/src/frames/index/2.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with 2</h1>
-    <div>Some of the articles that start with 2:</div>
+    <div>
+      2 is the second number in Arabic numerals. Some of the articles that start
+      with 2:
+    </div>
     <li><a href="./2/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./2/1.html" draggable="false">Anchor</a></li>
     <li><a href="./2/2.html" draggable="false">Anne Boleyn</a></li>
