--- a/src/frames/index/3.html
+++ b/src/frames/index/3.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with 3</h1>
-    <div>Some of the articles that start with 3:</div>
+    <div>
+      3 is the third number in Arabic numerals. Some of the articles that start
+      with 3:
+    </div>
     <li><a href="./3/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./3/1.html" draggable="false">Anchor</a></li>
     <li><a href="./3/2.html" draggable="false">Anne Boleyn</a></li>
