--- a/src/frames/index/5.html
+++ b/src/frames/index/5.html
@@ -8,7 +8,10 @@
 
   <body>
     <h1>Articles starting with 5</h1>
-    <div>Some of the articles that start with 5:</div>
+    <div>
+      5 is the fifth number in Arabic numerals. Some of the articles that start
+      with 5:
+    </div>
     <li><a href="./5/0.html" draggable="false">Anarchy</a></li>
     <li><a href="./5/1.html" draggable="false">Anchor</a></li>
     <li><a href="./5/2.html" draggable="false">Anne Boleyn</a></li>
