--- a/src/frames/index/S.html
+++ b/src/frames/index/S.html
@@ -8,14 +8,18 @@
 
   <body>
     <h1>Articles starting with S</h1>
-    <div>Some of the articles that start with S:</div>
-    <li><a href="./S/0.html" draggable="false">Anarchy</a></li>
-    <li><a href="./S/1.html" draggable="false">Anchor</a></li>
-    <li><a href="./S/2.html" draggable="false">Anne Boleyn</a></li>
+    <div>
+      S is the 19th letter in the modern English alphabet. Some of the articles
+      that start with S:
+    </div>
+    <li><a href="./S/0.html" draggable="false">Saa Boo Three</a></li>
+    <li><a href="./S/1.html" draggable="false">ScS</a></li>
+    <li><a href="./S/2.html" draggable="false">SD Gundam</a></li>
     <li>
-      <a href="./S/3.html" draggable="false">Appellation d'origine contrôlée</a>
+      <a href="./S/3.html" draggable="false">Sforza Hours</a>
     </li>
-    <li><a href="./S/4.html" draggable="false">Antimatter</a></li>
-    <li><a href="./S/5.html" draggable="false">Azithromycin</a></li>
+    <li><a href="./S/4.html" draggable="false">Shoegaze</a></li>
+    <li><a href="./S/5.html" draggable="false">Själagårdsgatan</a></li>
+    <li><a href="./S/5.html" draggable="false">Ska stroke</a></li>
   </body>
 </html>
